# In-Sync-OM-DEV

./: .gitignore  README.md  file.txt  main.py  pyproject.toml
docs/: cs_doc.md  development.md  gantt_chart.md  install.md  plan.md  pseudocode.md  structure.md  test_table.md
docs/fixes/: fix1.md  fix2.md  fix3.md  fix4.md  fix5.md  fixes.md
drafts/0.1.*/: draft1.py  draft2.py  draft3.py  draft4.py  draft5.py
drafts/0.2.*/: draft6.py  draft7.py  draft8.py  draft9.py
drafts/0.3.*/: draft10.py  draft11.py  draft12.py  draft13.py  draft14.py
drafts/0.4.*/: draft15.py  draft16.py  draft17.py  draft18.py
games/: plaingame.py  styledgame.py  testfunc.py
unused/: test.py  test10.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py
utils/: logo.py  tools.py  utilities.py
