
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "In_Sync_Dev"
version = "0.4.3"
description = "A cooperative card game where players attempt to play cards in ascending order without communicating."
authors = [
    {name = "Ocean Man (ocean-onion)"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
insync-game = "main:start_game"
in-sync = "main:start_game"

[tool.setuptools]
packages = ["games", "utils"]
